--- a/public_html/bio.html
+++ b/public_html/bio.html
@@ -8,7 +8,8 @@
 <body>
 <p>
  <br> 
- 
+ Jacob is not only the owner of the Roleplay game Invasatory, but also enjoys lego’s, biking and hiking and the outdoors. born in oregon, Jacob was always close to nature, and bases a lot of his hobbies on nature and exploring. he currently has many projects, but hopes to finish Invasatory prototype 1 by late 2023 to early 2024
+
 
 Home: <a href="index.html"><button><class="button">Home</button></a>
 Bio: <a href="bio.html"><button><class="button">Bio</button></a>
