--- a/public_html/otherprojects.html
+++ b/public_html/otherprojects.html
@@ -4,6 +4,7 @@
 <style>
 body { /* color green */
   background-color: #23451e;
+  color: #FFFFFF;
 }
 #p.cool { /* do class: p.cool later */
   border: solid;
